--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="Imposter">
 
 <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,
 <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
-<circle cx='50' cy='50' r='50' fill='%23020717'/>
+<circle cx='50' cy='50' r='50' fill='%23020a18'/>
 <circle cx='50' cy='36' r='16' fill='%2360a5fa'/>
 <path d='M30 70c0-14 40-14 40 0v8H30z' fill='%2360a5fa'/>
-<rect x='24' y='30' width='52' height='10' rx='5' fill='%23020717'/>
+<rect x='24' y='30' width='52' height='10' rx='5' fill='%23020a18'/>
 </svg>">
 
 <style>
@@ -22,8 +21,8 @@
 
 :root{
 --bg:#020617;
---panel:#0f172a;
---panelSoft:#111827;
+--card:#0f172a;
+--soft:#111827;
 --accent:#60a5fa;
 --text:#e5e7eb;
 --muted:#94a3b8;
@@ -33,75 +32,76 @@
 
 body{
 margin:0;
-background:linear-gradient(180deg,#020617,#0b122a,#020617);
+background:linear-gradient(180deg,#020617,#0b122a);
 color:var(--text);
-padding:20px;
-text-align:center;
+padding:16px;
 }
 
 .hidden{display:none}
 
-h1{font-size:34px;font-weight:800;margin-bottom:6px}
-h2{margin:0 0 10px}
-p{color:var(--muted)}
+h1{font-size:34px;font-weight:800;margin:10px 0}
+h2{margin:0 0 8px}
+p{color:var(--muted);margin:6px 0}
 
 button{
 border:none;
-border-radius:16px;
-padding:14px 20px;
+border-radius:18px;
+padding:16px;
 font-weight:700;
 background:var(--accent);
 color:#020617;
 cursor:pointer;
-transition:.2s;
+width:100%;
 }
 
 button.secondary{
-background:var(--panelSoft);
+background:var(--soft);
 color:var(--text);
 }
 
-button:hover{transform:translateY(-2px)}
-
-.panel{
-background:linear-gradient(160deg,var(--panel),#020617);
-border-radius:24px;
-padding:24px;
-max-width:520px;
-margin:20px auto;
+.screen{
+max-width:420px;
+margin:auto;
 }
 
-input,select{
-background:var(--panelSoft);
-border:1px solid #1e293b;
-border-radius:12px;
-padding:10px;
-color:var(--text);
-text-align:center;
-width:100%;
+.card{
+background:linear-gradient(160deg,var(--card),#020617);
+border-radius:28px;
+padding:22px;
+margin-top:18px;
+box-shadow:0 20px 40px rgba(0,0,0,.4);
 }
 
 .row{
 display:flex;
 gap:12px;
-flex-wrap:wrap;
-justify-content:center;
+}
+
+input,select{
+background:var(--soft);
+border:1px solid #1e293b;
+border-radius:14px;
+padding:12px;
+color:var(--text);
+width:100%;
+text-align:center;
+font-size:16px;
 }
 
 .grid{
 display:grid;
-grid-template-columns:repeat(auto-fit,minmax(130px,1fr));
-gap:16px;
-margin-top:20px;
+grid-template-columns:repeat(2,1fr);
+gap:14px;
+margin-top:18px;
 }
 
 .tile{
 background:linear-gradient(145deg,#111c3a,#0b1433);
-padding:46px 10px;
-border-radius:20px;
-font-weight:600;
+border-radius:22px;
+padding:40px 12px;
+font-weight:700;
+text-align:center;
 cursor:pointer;
-transition:.2s;
 }
 
 .tile.used{opacity:0;pointer-events:none}
@@ -109,7 +109,7 @@ transition:.2s;
 .overlay{
 position:fixed;
 inset:0;
-background:rgba(2,6,23,.88);
+background:rgba(2,6,23,.92);
 display:flex;
 align-items:center;
 justify-content:center;
@@ -120,62 +120,71 @@ transition:.3s;
 
 .overlay.show{opacity:1;pointer-events:auto}
 
-.card{
-background:linear-gradient(160deg,var(--panel),#020617);
-border-radius:22px;
+.modal{
+background:linear-gradient(160deg,var(--card),#020617);
+border-radius:26px;
 padding:28px;
 width:90%;
-max-width:380px;
+max-width:360px;
+text-align:center;
+}
+
+.icon{
+font-size:40px;
+margin-bottom:8px;
 }
 </style>
 </head>
 
 <body>
 
+<div class="screen">
+
 <!-- MENU -->
-<div id="menu" class="panel">
+<div id="menu" class="card">
+<div class="icon">🕵️‍♂️</div>
 <h1>Imposter</h1>
-<p>Think carefully. Stay niche.</p>
-<button onclick="goSetup()">Start</button>
+<p>A social deduction game</p>
+<button onclick="goSetup()">Begin</button>
 </div>
 
 <!-- SETUP -->
-<div id="setup" class="panel hidden">
+<div id="setup" class="card hidden">
 <h2>Game Setup</h2>
 
 <div class="row">
-<input type="number" id="playerCount" min="4" max="12" value="6" placeholder="Players">
-<input type="number" id="imposterCount" min="1" max="3" value="1" placeholder="Imposters">
+<input id="playerCount" type="number" min="4" max="12" value="6" placeholder="Players">
+<input id="imposterCount" type="number" min="1" max="3" value="1" placeholder="Imposters">
 </div>
 
 <select id="categorySelect">
-<option value="all">All Categories</option>
-<option value="animals">Animals</option>
-<option value="food">Food</option>
-<option value="locations">Locations</option>
-<option value="objects">Objects</option>
+<option value="all">🌐 All Categories</option>
+<option value="sports">🏟 Sports</option>
+<option value="animals">🐾 Animals</option>
+<option value="food">🍔 Food</option>
+<option value="locations">📍 Locations</option>
+<option value="objects">📦 Objects</option>
 </select>
 
-<div id="names" class="row"></div>
+<div id="names"></div>
 
-<button onclick="startGame()">Begin</button>
+<button onclick="startGame()">Start Game</button>
 <button class="secondary" onclick="goMenu()">Back</button>
 </div>
 
 <!-- GAME -->
-<div id="game" class="hidden">
-<h2 id="speaker"></h2>
+<div id="game" class="card hidden">
+<p id="speaker"></p>
 <div class="grid" id="grid"></div>
-<div class="row">
-<button class="secondary" onclick="editNames()">Edit Names</button>
-<button onclick="newRound()">New Round</button>
 <button id="revealBtn" class="secondary hidden" onclick="showReveal()">Reveal</button>
+<button class="secondary" onclick="newRound()">Next Round</button>
 </div>
+
 </div>
 
 <!-- ROLE -->
 <div class="overlay" id="overlay">
-<div class="card">
+<div class="modal">
 <h2 id="roleTitle"></h2>
 <p id="roleText"></p>
 <button onclick="closeOverlay()">OK</button>
@@ -184,69 +193,61 @@ max-width:380px;
 
 <!-- REVEAL -->
 <div class="overlay" id="reveal">
-<div class="card">
-<h2>Reveal</h2>
-<p><b>Answer:</b> <span id="finalAnswer"></span></p>
-<p><b>Imposters:</b></p>
+<div class="modal">
+<h2>Answer</h2>
+<p id="finalAnswer"></p>
+<p><b>Imposters</b></p>
 <p id="finalImposters"></p>
-<button onclick="closeReveal()">Next</button>
+<button onclick="closeReveal()">Done</button>
 </div>
 </div>
 
 <script>
-const categories={
+const data={
+sports:[
+["LeBron James","longevity"],
+["Patrick Mahomes","sidearm"],
+["Shohei Ohtani","two-way"],
+["Yankees","pinstripes"],
+["Warriors","splash"]
+],
 animals:[
-["Dog","leash"],["Cat","whiskers"],["Horse","saddle"],["Cow","pasture"],["Sheep","wool"],
-["Lion","mane"],["Tiger","stripes"],["Bear","hibernation"],["Elephant","trunk"],
-["Giraffe","spots"],["Monkey","branch"],["Dolphin","pod"],["Shark","fin"],
-["Frog","pond"],["Snake","coil"],["Eagle","perch"],["Owl","silent"],
-["Penguin","waddle"],["Kangaroo","pouch"],["Zebra","herd"]
+["Dog","leash"],["Cat","whiskers"],["Lion","mane"],["Elephant","trunk"],
+["Penguin","waddle"],["Owl","silent"],["Kangaroo","pouch"]
 ],
 food:[
-["Pizza","slice"],["Burger","stack"],["Pasta","twirl"],["Tacos","fold"],
-["Sushi","roll"],["Steak","sear"],["Ice Cream","scoop"],["Pancakes","stack"],
-["Fries","basket"],["Hot Dog","bun"],["Sandwich","layers"],["Soup","steam"],
-["Ramen","slurp"],["Salad","toss"],["Donut","glaze"],["Cookie","crumbs"],
-["Popcorn","kernel"],["Rice","grain"],["Cereal","bowl"]
+["Pizza","slice"],["Burger","stack"],["Sushi","roll"],
+["Pancakes","stack"],["Fries","basket"],["Donut","glaze"]
 ],
 locations:[
-["Beach","shore"],["School","hallway"],["Hospital","ward"],["Airport","gate"],
-["Mall","foodcourt"],["Library","stacks"],["Gym","rack"],["Park","bench"],
-["Stadium","bleachers"],["Theater","curtain"],["Zoo","enclosure"],
-["Museum","exhibit"],["Hotel","lobby"],["Restaurant","booth"],
-["Gas Station","pump"],["Subway","platform"],["Farm","barn"],
-["Camp","firepit"],["Office","cubicle"]
+["Library","stacks"],["Airport","gate"],["Beach","shore"],
+["Gym","rack"],["Hospital","ward"],["School","hallway"]
 ],
 objects:[
-["Phone","screen"],["Laptop","keyboard"],["TV","remote"],["Clock","hands"],
-["Chair","legs"],["Table","edge"],["Backpack","zipper"],["Shoes","laces"],
-["Hat","brim"],["Glasses","frames"],["Wallet","fold"],
-["Keys","jingle"],["Bottle","cap"],["Cup","handle"],
-["Book","spine"],["Pen","click"],["Mirror","reflection"],
-["Couch","cushion"],["Door","hinge"]
+["Phone","screen"],["Keys","jingle"],["Clock","hands"],
+["Backpack","zipper"],["Chair","legs"]
 ]
 };
 
 let names=[],roles=[],current={},viewed=0;
-
-function goMenu(){
-menu.classList.remove("hidden");
-setup.classList.add("hidden");
-game.classList.add("hidden");
-}
 
 function goSetup(){
 menu.classList.add("hidden");
 setup.classList.remove("hidden");
 buildNames();
 }
+function goMenu(){
+setup.classList.add("hidden");
+game.classList.add("hidden");
+menu.classList.remove("hidden");
+}
 
 function buildNames(){
 namesDiv.innerHTML="";
 for(let i=0;i<playerCount.value;i++){
-const inp=document.createElement("input");
-inp.placeholder=`Player ${i+1}`;
-namesDiv.appendChild(inp);
+const iEl=document.createElement("input");
+iEl.placeholder=`Player ${i+1}`;
+namesDiv.appendChild(iEl);
 }
 }
 
@@ -257,22 +258,16 @@ game.classList.remove("hidden");
 newRound();
 }
 
-function editNames(){
-game.classList.add("hidden");
-setup.classList.remove("hidden");
-buildNames();
-}
-
 function newRound(){
 viewed=0;
 revealBtn.classList.add("hidden");
 
 const pool=categorySelect.value==="all"
-?Object.values(categories).flat()
-:categories[categorySelect.value];
+?Object.values(data).flat()
+:data[categorySelect.value];
 
 const pick=pool[Math.floor(Math.random()*pool.length)];
-current={answer:pick[0],hint:pick[1]};
+current={answer:pick[0],hint:pick[1],category:categorySelect.options[categorySelect.selectedIndex].text};
 
 roles=Array(names.length).fill("player");
 for(let i=0;i<Math.min(imposterCount.value,names.length-1);i++)roles[i]="imposter";
@@ -299,7 +294,7 @@ function showRole(i){
 overlay.classList.add("show");
 if(roles[i]==="imposter"){
 roleTitle.textContent="IMPOSTER";
-roleText.textContent=current.hint;
+roleText.textContent=`Category: ${current.category}\nHint: ${current.hint}`;
 }else{
 roleTitle.textContent=current.answer;
 roleText.textContent="Stay niche.";
