--- a/index.html
+++ b/index.html
@@ -4,60 +4,38 @@
 <meta charset="UTF-8">
 <title>Imposter</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 <meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-title" content="Imposter">
 
 <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,
 <svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'>
-<circle cx='50' cy='50' r='50' fill='%23020a18'/>
-<circle cx='50' cy='36' r='16' fill='%2360a5fa'/>
-<path d='M30 70c0-14 40-14 40 0v8H30z' fill='%2360a5fa'/>
-<rect x='24' y='30' width='52' height='10' rx='5' fill='%23020a18'/>
+<circle cx='50' cy='50' r='50' fill='%23000000'/>
+<circle cx='50' cy='36' r='14' fill='%23ffffff'/>
+<path d='M30 70c0-14 40-14 40 0v6H30z' fill='%23ffffff'/>
+<rect x='24' y='30' width='52' height='8' rx='4' fill='%23000000'/>
 </svg>">
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap');
 
 :root{
---bg:#020617;
---card:#0f172a;
---soft:#111827;
---accent:#60a5fa;
---text:#e5e7eb;
---muted:#94a3b8;
+--bg:#000000;
+--card:#0a0a0a;
+--border:#1f1f1f;
+--text:#f5f5f5;
+--muted:#9ca3af;
+--accent:#ffffff;
 }
 
 *{box-sizing:border-box;font-family:'Inter',system-ui,sans-serif}
 
 body{
 margin:0;
-background:linear-gradient(180deg,#020617,#0b122a);
+background:var(--bg);
 color:var(--text);
 padding:16px;
 }
 
 .hidden{display:none}
-
-h1{font-size:34px;font-weight:800;margin:10px 0}
-h2{margin:0 0 8px}
-p{color:var(--muted);margin:6px 0}
-
-button{
-border:none;
-border-radius:18px;
-padding:16px;
-font-weight:700;
-background:var(--accent);
-color:#020617;
-cursor:pointer;
-width:100%;
-}
-
-button.secondary{
-background:var(--soft);
-color:var(--text);
-}
 
 .screen{
 max-width:420px;
@@ -65,11 +43,41 @@ margin:auto;
 }
 
 .card{
-background:linear-gradient(160deg,var(--card),#020617);
-border-radius:28px;
+background:var(--card);
+border:1px solid var(--border);
+border-radius:22px;
 padding:22px;
-margin-top:18px;
-box-shadow:0 20px 40px rgba(0,0,0,.4);
+margin-top:16px;
+}
+
+h1{
+font-size:34px;
+font-weight:800;
+margin:0 0 8px;
+}
+
+h2{
+font-size:18px;
+margin-bottom:14px;
+}
+
+label{
+font-size:13px;
+color:var(--muted);
+display:block;
+margin-bottom:6px;
+text-align:left;
+}
+
+input,select{
+width:100%;
+background:#000;
+border:1px solid var(--border);
+border-radius:14px;
+padding:12px;
+color:var(--text);
+font-size:15px;
+margin-bottom:14px;
 }
 
 .row{
@@ -77,61 +85,76 @@ display:flex;
 gap:12px;
 }
 
-input,select{
-background:var(--soft);
-border:1px solid #1e293b;
-border-radius:14px;
-padding:12px;
-color:var(--text);
+button{
 width:100%;
-text-align:center;
-font-size:16px;
+padding:14px;
+border-radius:16px;
+border:none;
+font-weight:700;
+font-size:15px;
+background:var(--accent);
+color:#000;
+cursor:pointer;
+}
+
+button.secondary{
+background:#000;
+color:var(--text);
+border:1px solid var(--border);
+margin-top:10px;
 }
 
 .grid{
 display:grid;
 grid-template-columns:repeat(2,1fr);
 gap:14px;
-margin-top:18px;
+margin-top:14px;
 }
 
 .tile{
-background:linear-gradient(145deg,#111c3a,#0b1433);
-border-radius:22px;
-padding:40px 12px;
+background:#000;
+border:1px solid var(--border);
+border-radius:18px;
+padding:40px 10px;
 font-weight:700;
-text-align:center;
 cursor:pointer;
 }
 
-.tile.used{opacity:0;pointer-events:none}
+.tile.used{
+opacity:0;
+pointer-events:none;
+}
 
 .overlay{
 position:fixed;
 inset:0;
-background:rgba(2,6,23,.92);
+background:rgba(0,0,0,.92);
 display:flex;
 align-items:center;
 justify-content:center;
 opacity:0;
 pointer-events:none;
-transition:.3s;
+transition:.25s;
 }
 
-.overlay.show{opacity:1;pointer-events:auto}
+.overlay.show{
+opacity:1;
+pointer-events:auto;
+}
 
 .modal{
-background:linear-gradient(160deg,var(--card),#020617);
-border-radius:26px;
-padding:28px;
+background:#000;
+border:1px solid var(--border);
+border-radius:22px;
+padding:26px;
 width:90%;
 max-width:360px;
 text-align:center;
 }
 
 .icon{
-font-size:40px;
-margin-bottom:8px;
+font-size:42px;
+margin-bottom:10px;
 }
 </style>
 </head>
@@ -144,7 +167,7 @@ margin-bottom:8px;
 <div id="menu" class="card">
 <div class="icon">🕵️‍♂️</div>
 <h1>Imposter</h1>
-<p>A social deduction game</p>
+<p style="color:var(--muted)">A social deduction game</p>
 <button onclick="goSetup()">Begin</button>
 </div>
 
@@ -152,18 +175,20 @@ margin-bottom:8px;
 <div id="setup" class="card hidden">
 <h2>Game Setup</h2>
 
-<div class="row">
-<input id="playerCount" type="number" min="4" max="12" value="6" placeholder="Players">
-<input id="imposterCount" type="number" min="1" max="3" value="1" placeholder="Imposters">
-</div>
+<label>Number of Players</label>
+<input id="playerCount" type="number" min="4" max="12" value="6">
 
+<label>Number of Imposters</label>
+<input id="imposterCount" type="number" min="1" max="3" value="1">
+
+<label>Category</label>
 <select id="categorySelect">
-<option value="all">🌐 All Categories</option>
-<option value="sports">🏟 Sports</option>
-<option value="animals">🐾 Animals</option>
-<option value="food">🍔 Food</option>
-<option value="locations">📍 Locations</option>
-<option value="objects">📦 Objects</option>
+<option value="all">All Categories</option>
+<option value="sports">Sports</option>
+<option value="animals">Animals</option>
+<option value="food">Food</option>
+<option value="locations">Locations</option>
+<option value="objects">Objects</option>
 </select>
 
 <div id="names"></div>
@@ -196,7 +221,7 @@ margin-bottom:8px;
 <div class="modal">
 <h2>Answer</h2>
 <p id="finalAnswer"></p>
-<p><b>Imposters</b></p>
+<p style="margin-top:10px"><b>Imposters</b></p>
 <p id="finalImposters"></p>
 <button onclick="closeReveal()">Done</button>
 </div>
@@ -206,26 +231,26 @@ margin-bottom:8px;
 const data={
 sports:[
 ["LeBron James","longevity"],
-["Patrick Mahomes","sidearm"],
-["Shohei Ohtani","two-way"],
+["Mahomes","sidearm"],
+["Ohtani","two-way"],
 ["Yankees","pinstripes"],
 ["Warriors","splash"]
 ],
 animals:[
-["Dog","leash"],["Cat","whiskers"],["Lion","mane"],["Elephant","trunk"],
-["Penguin","waddle"],["Owl","silent"],["Kangaroo","pouch"]
+["Dog","leash"],["Cat","whiskers"],["Lion","mane"],
+["Elephant","trunk"],["Penguin","waddle"]
 ],
 food:[
 ["Pizza","slice"],["Burger","stack"],["Sushi","roll"],
-["Pancakes","stack"],["Fries","basket"],["Donut","glaze"]
+["Fries","basket"],["Donut","glaze"]
 ],
 locations:[
 ["Library","stacks"],["Airport","gate"],["Beach","shore"],
-["Gym","rack"],["Hospital","ward"],["School","hallway"]
+["Gym","rack"],["Hospital","ward"]
 ],
 objects:[
-["Phone","screen"],["Keys","jingle"],["Clock","hands"],
-["Backpack","zipper"],["Chair","legs"]
+["Phone","screen"],["Keys","jingle"],
+["Clock","hands"],["Backpack","zipper"]
 ]
 };
 
@@ -236,6 +261,7 @@ menu.classList.add("hidden");
 setup.classList.remove("hidden");
 buildNames();
 }
+
 function goMenu(){
 setup.classList.add("hidden");
 game.classList.add("hidden");
@@ -245,9 +271,9 @@ menu.classList.remove("hidden");
 function buildNames(){
 namesDiv.innerHTML="";
 for(let i=0;i<playerCount.value;i++){
-const iEl=document.createElement("input");
-iEl.placeholder=`Player ${i+1}`;
-namesDiv.appendChild(iEl);
+const input=document.createElement("input");
+input.placeholder=`Player ${i+1}`;
+namesDiv.appendChild(input);
 }
 }
 
@@ -277,16 +303,16 @@ speaker.textContent="First word: "+names[Math.floor(Math.random()*names.length)]
 grid.innerHTML="";
 
 names.forEach((n,i)=>{
-const t=document.createElement("div");
-t.className="tile";
-t.textContent=n;
-t.onclick=()=>{
+const tile=document.createElement("div");
+tile.className="tile";
+tile.textContent=n;
+tile.onclick=()=>{
 showRole(i);
-t.classList.add("used");
+tile.classList.add("used");
 viewed++;
 if(viewed===names.length)revealBtn.classList.remove("hidden");
 };
-grid.appendChild(t);
+grid.appendChild(tile);
 });
 }
 
@@ -305,12 +331,5 @@ function closeOverlay(){overlay.classList.remove("show")}
 
 function showReveal(){
 finalAnswer.textContent=current.answer;
-finalImposters.textContent=names.filter((_,i)=>roles[i]==="imposter").join(", ");
-reveal.classList.add("show");
-}
+final
 
-function closeReveal(){reveal.classList.remove("show")}
-</script>
-
-</body>
-</html>
