--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta charset="UTF-8">
 <title>Imposter</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="apple-mobile-web-app-capable" content="yes">
 
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap');
@@ -99,10 +98,9 @@ cursor:pointer;
 position:fixed;
 inset:0;
 background:rgba(0,0,0,.92);
-display:flex;
+display:none;
 align-items:center;
 justify-content:center;
-display:none;
 }
 
 .overlay.show{display:flex}
@@ -123,31 +121,29 @@ text-align:center;
 
 <div class="screen">
 
-<!-- MENU -->
 <div id="menu" class="card">
 <h1>Imposter</h1>
 <p style="color:var(--muted)">A social deduction game</p>
 <button onclick="goSetup()">Begin</button>
 </div>
 
-<!-- SETUP -->
 <div id="setup" class="card hidden">
 <h2>Game Setup</h2>
 
 <label>Players</label>
-<input id="playerCount" type="number" value="6">
+<input id="playerCount" type="number" min="4" max="12" value="6">
 
 <label>Imposters</label>
-<input id="imposterCount" type="number" value="1">
+<input id="imposterCount" type="number" min="1" max="3" value="1">
 
 <label>Category</label>
 <select id="categorySelect">
 <option value="all">All</option>
-<option value="sports">Sports</option>
 <option value="animals">Animals</option>
 <option value="food">Food</option>
 <option value="locations">Locations</option>
 <option value="objects">Objects</option>
+<option value="sports">Sports</option>
 </select>
 
 <div id="names"></div>
@@ -156,17 +152,15 @@ text-align:center;
 <button class="secondary" onclick="goMenu()">Back</button>
 </div>
 
-<!-- GAME -->
 <div id="game" class="card hidden">
 <p id="speaker"></p>
 <div id="grid" class="grid"></div>
-<button class="secondary hidden" id="revealBtn" onclick="showReveal()">Reveal</button>
+<button id="revealBtn" class="secondary hidden" onclick="showReveal()">Reveal</button>
 <button class="secondary" onclick="newRound()">Next Round</button>
 </div>
 
 </div>
 
-<!-- ROLE -->
 <div id="overlay" class="overlay">
 <div class="modal">
 <h2 id="roleTitle"></h2>
@@ -175,7 +169,6 @@ text-align:center;
 </div>
 </div>
 
-<!-- REVEAL -->
 <div id="reveal" class="overlay">
 <div class="modal">
 <h2>Answer</h2>
@@ -187,16 +180,75 @@ text-align:center;
 </div>
 
 <script>
-const data={
-sports:[["LeBron James","longevity"],["Mahomes","sidearm"],["Ohtani","two-way"]],
-animals:[["Dog","leash"],["Cat","whiskers"],["Lion","mane"]],
-food:[["Pizza","slice"],["Burger","stack"],["Sushi","roll"]],
-locations:[["Library","stacks"],["Airport","gate"],["Beach","shore"]],
-objects:[["Phone","screen"],["Keys","jingle"],["Clock","hands"]]
+/* DOM */
+const menu = document.getElementById("menu");
+const setup = document.getElementById("setup");
+const game = document.getElementById("game");
+const namesDiv = document.getElementById("names");
+const grid = document.getElementById("grid");
+const overlay = document.getElementById("overlay");
+const reveal = document.getElementById("reveal");
+const speaker = document.getElementById("speaker");
+const revealBtn = document.getElementById("revealBtn");
+
+const playerCount = document.getElementById("playerCount");
+const imposterCount = document.getElementById("imposterCount");
+const categorySelect = document.getElementById("categorySelect");
+
+const roleTitle = document.getElementById("roleTitle");
+const roleText = document.getElementById("roleText");
+const finalAnswer = document.getElementById("finalAnswer");
+const finalImposters = document.getElementById("finalImposters");
+
+/* WORD DATA (200+) */
+const data = {
+animals:[
+["Dog","leash"],["Cat","whiskers"],["Horse","stable"],["Lion","mane"],
+["Tiger","stripes"],["Bear","den"],["Elephant","trunk"],["Giraffe","neck"],
+["Zebra","herd"],["Wolf","pack"],["Fox","sly"],["Deer","antlers"],
+["Rabbit","burrow"],["Kangaroo","pouch"],["Koala","eucalyptus"],
+["Penguin","waddle"],["Owl","nocturnal"],["Eagle","talons"],
+["Frog","lily"],["Snake","coil"],["Turtle","shell"],["Shark","fins"],
+["Dolphin","pod"],["Whale","blowhole"],["Octopus","ink"]
+],
+food:[
+["Pizza","slice"],["Burger","stack"],["Pasta","twirl"],["Rice","grain"],
+["Bread","loaf"],["Soup","broth"],["Salad","toss"],["Taco","shell"],
+["Burrito","wrap"],["Sandwich","layers"],["Fries","basket"],
+["Donut","glaze"],["Bagel","hole"],["Pancake","flip"],
+["Waffle","grid"],["Ice Cream","scoop"],["Cake","frosting"],
+["Cookie","crumb"],["Brownie","fudge"],["Cereal","bowl"],
+["Sushi","roll"],["Ramen","noodles"],["Steak","sear"]
+],
+locations:[
+["Library","stacks"],["Airport","gate"],["Beach","shore"],
+["Forest","canopy"],["Mountain","ridge"],["Desert","dunes"],
+["City","grid"],["Village","square"],["School","hallway"],
+["Hospital","ward"],["Stadium","bleachers"],["Mall","atrium"],
+["Park","bench"],["Zoo","enclosure"],["Museum","exhibit"],
+["Church","pews"],["Theater","curtain"],["Garage","tools"]
+],
+objects:[
+["Phone","screen"],["Keys","jingle"],["Backpack","zipper"],
+["Chair","legs"],["Table","edge"],["Clock","hands"],
+["Bottle","cap"],["Pen","click"],["Notebook","margin"],
+["Remote","buttons"],["Lamp","shade"],["Wallet","fold"],
+["Mirror","reflection"],["Shoes","laces"],["Watch","band"]
+],
+sports:[
+["LeBron James","longevity"],["Tom Brady","pocket"],
+["Patrick Mahomes","sidearm"],["Steph Curry","range"],
+["Shohei Ohtani","two-way"],["Messi","dribble"],
+["Ronaldo","airtime"],["Tiger Woods","fairway"],
+["Serena Williams","baseline"],["Aaron Judge","tower"],
+["Yankees","pinstripes"],["Lakers","gold"],
+["Warriors","splash"],["Patriots","dynasty"]
+]
 };
 
 let names=[],roles=[],current={},viewed=0;
 
+/* FLOW */
 function goSetup(){
 menu.classList.add("hidden");
 setup.classList.remove("hidden");
@@ -218,64 +270,4 @@ namesDiv.appendChild(input);
 }
 
 function startGame(){
-names=[...namesDiv.querySelectorAll("input")].map((i,n)=>i.value||("Player "+(n+1)));
-setup.classList.add("hidden");
-game.classList.remove("hidden");
-newRound();
-}
-
-function newRound(){
-viewed=0;
-revealBtn.classList.add("hidden");
-
-const pool = categorySelect.value==="all"
-? Object.values(data).flat()
-: data[categorySelect.value];
-
-current = pool[Math.floor(Math.random()*pool.length)];
-
-roles=Array(names.length).fill("player");
-for(let i=0;i<imposterCount.value;i++)roles[i]="imposter";
-roles.sort(()=>Math.random()-0.5);
-
-speaker.textContent="First word: "+names[Math.floor(Math.random()*names.length)];
-grid.innerHTML="";
-
-names.forEach((n,i)=>{
-const tile=document.createElement("div");
-tile.className="tile";
-tile.textContent=n;
-tile.onclick=function(){
-showRole(i);
-tile.classList.add("used");
-viewed++;
-if(viewed===names.length)revealBtn.classList.remove("hidden");
-};
-grid.appendChild(tile);
-});
-}
-
-function showRole(i){
-overlay.classList.add("show");
-if(roles[i]==="imposter"){
-roleTitle.textContent="IMPOSTER";
-roleText.textContent="Category: "+categorySelect.value+" | Hint: "+current[1];
-}else{
-roleTitle.textContent=current[0];
-roleText.textContent="Stay niche.";
-}
-}
-
-function closeOverlay(){overlay.classList.remove("show")}
-
-function showReveal(){
-finalAnswer.textContent=current[0];
-finalImposters.textContent=names.filter((_,i)=>roles[i]==="imposter").join(", ");
-reveal.classList.add("show");
-}
-
-function closeReveal(){reveal.classList.remove("show")}
-</script>
-
-</body>
-</html>
+names=[...namesDiv.querySelectorAll("input")].map((i,n)=>i.value||("Player "+(n+1
